@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX pipepanic-0.1.3-gentoo.patch 584 RMD160 1cd9c05320fc44e90d55f866ad38ef2e67e94dc6 SHA1 cd253cdb06826c7ba8f6783b3b95857482232e8d SHA256 e71d9c290a37bdeba2f64d2f371e68ff0c944ec65453e2cd6571ea7807df47b1
-DIST pipepanic-0.1.3-source.tar.gz 232200 RMD160 4e729c31b2130096f9c511757cf9853da347e954 SHA1 f0100a1452a08bce5ba65b04adc6d829152b2c45 SHA256 4b02249c92228b03f4cc3c1d999cacf3fe52c16df53c6bf76fc6c1e2caa74318
-EBUILD pipepanic-0.1.3.ebuild 1065 RMD160 306c18e5329821d4d0a51f5457f273e6f9dd84c7 SHA1 5859e20bd7eb557c6864c4694c3c094cbdcd64de SHA256 9fa50c7e601503e46aa2d87a9c1c38a33d8c8a96f7af4002ff7a5b4a83ac2bc1
-MISC ChangeLog 833 RMD160 642b04a353e1d0ba34ab48a417f4212e89e7fb79 SHA1 a782bec71f7f155de4e8f884434c1c8e4725d48c SHA256 2212f390bff3340488f1459524548838cd4848ac4900c7e069b7d90968c819cf
-MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+AUX pipepanic-0.1.3-gentoo.patch 584 SHA256 e71d9c290a37bdeba2f64d2f371e68ff0c944ec65453e2cd6571ea7807df47b1 SHA512 0fef3b79063bcae38412679ce5644d8d119ba3a86b8a752234d97b7009044373f6cda8e983b53864f266e5c00203fb278c61fa44af432014b1aba5a402d41bab WHIRLPOOL 3664c501a42521c612b80d1159bd888848530ba9ad795084f848e37aeabc47294e054d4a56db25d6b3a6a3de90c67a554037418b95b2c158f05d8506b5a5e24e
+DIST pipepanic-0.1.3-source.tar.gz 232200 SHA256 4b02249c92228b03f4cc3c1d999cacf3fe52c16df53c6bf76fc6c1e2caa74318 SHA512 468f3194976c7030c2fa3d8f30eaa13cc25e0b04feeb48a5d1267d119eb991618bad14ddba0a8268e6b92f38f2a17bc5b119728b222b0ee50494807832ad2ab7 WHIRLPOOL bdbef665dcee14b1360d1726701986991f8adbfe4da1a4f429af725bfa74232efc9736ced944ecbd7a6b216a7af39d698a591fa48d2d279875f953f024020af4
+EBUILD pipepanic-0.1.3.ebuild 1037 SHA256 33a6aec026fbec9ca081735c065b0d6719bae2c33c5eb9a03f6e033efaae6a92 SHA512 b94b3b715a2310fa253a1b603721cebccbe6948e030a9f6448d72a36881b76c8f86e3aad43d5e8f91a2da55688847ce95eddb8a815c9e88edca4567c3a9b2622 WHIRLPOOL da0f2df4d54ff3f18f8c77f9dc0d8dac81cf7a9a3560dce1ecb7f283dc4aec1439281dc258321a2e1ca7b903f9a8ceda9606a9116a22414cfc8ef28a0a2bc090
+MISC ChangeLog 917 SHA256 0f1bae5351a165a42d67bec088d9efed6c66c465dc2a792ad0ed46cd5ed52392 SHA512 78d77afc48121a31bfc7e4d8e818d778f06bae9a72b83246d098da0c2a0966f74a3ec656eb23c72fa93cf7d62e8eb88aa01d8801f8a63d05e83048990feb193c WHIRLPOOL a176c9b76721bd094f699ca371f018542b1b03e728a69de37394432e8b3aee645b56c818e68a563ed2020ee161ec0b8a599638170e29da8e8f14b2d2776f0031
+MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEARECAAYFAktGAMoACgkQcsIHjyDViGS1+wCfdIDrPktY5/vWzA0N27yiHzhO
-u/4AoOROJdVImFNGNAchHM3XRxI4105a
-=y3yl
+iEYEAREIAAYFAlTs9ZoACgkQIY77eQFFFC3r1ACePC0OrF1o+F+B76Hktth6/YiQ
+A9oAnik3oB87UournYj5+TM5Z5pwxXON
+=8pYI
 -----END PGP SIGNATURE-----
