@@ -1,8 +1,8 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/pipepanic/pipepanic-0.1.3.ebuild,v 1.5 2010/01/07 15:43:45 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/pipepanic/pipepanic-0.1.3.ebuild,v 1.6 2015/02/24 22:05:08 tupone Exp $
 
-EAPI=2
+EAPI=5
 inherit eutils games
 
 DESCRIPTION="A simple pipe connecting game"
@@ -15,6 +15,7 @@ KEYWORDS="amd64 ppc x86"
 IUSE=""
 
 DEPEND="media-libs/libsdl[video]"
+RDEPEND="${RDEPEND}"
 
 S=${WORKDIR}/${P}-source
 
@@ -28,10 +29,10 @@ src_prepare() {
 }
 
 src_install() {
-	dogamesbin "${PN}" || die "dogamesbin failed"
+	dogamesbin "${PN}"
 
 	insinto "${GAMES_DATADIR}/${PN}"
-	doins *.bmp || die "doins failed"
+	doins *.bmp
 	newicon PipepanicIcon64.png ${PN}.png
 	make_desktop_entry ${PN} "Pipepanic"
 
