@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/pipepanic
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/pipepanic/ChangeLog,v 1.5 2010/01/07 15:43:45 josejx Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/pipepanic/ChangeLog,v 1.6 2015/02/24 22:05:08 tupone Exp $
+
+  24 Feb 2015; Tupone Alfredo <tupone@gentoo.org> pipepanic-0.1.3.ebuild:
+  EAPI 5
 
   07 Jan 2010; Joseph Jezak <josejx@gentoo.org> pipepanic-0.1.3.ebuild:
   Marked ppc stable for bug #297265.
